# yolo-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  devenv.nix  flake.nix
.cargo/: config.toml
.github/workflows/: nix.yaml  rust-build.yml  rust-style.yml  rust.yml
examples/yolo-cli/: Cargo.toml  README.md
examples/yolo-cli/src/: main.rs
scripts/: export_promptable_yoloe.py
src/: error.rs  lib.rs  load.rs  model.rs  prompt.rs
