[package]
name = "example-yolo-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
ort = { version = "2.0.0-rc.12" }
raqote = { version = "0.8.5", default-features = false }
show-image = { version = "=0.14.0", features = ["image", "raqote"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
yolo-rs = { version = "0.2.0", path = "../.." }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.12", features = ["coreml"] }
